# gemini-ensemble

./: .gitignore  LICENSE  README.md  pyproject.toml  reducer_comparison.md
examples/: example_usage.py
src/gemini_ensemble/: .cli.py.swp  .client.py.swp  __init__.py  cli.py  client.py  reducer.py
tests/: test_ensemble.py
