[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-ensemble"
version = "1.0.0"
description = "A Python library for Gemini LLM ensemble control with dynamic temperature scattering and customizable reducers."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "google-genai>=0.1.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gemini-ensemble = "gemini_ensemble.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
